force-app/main/default/objects/Workflow_Behavior_Event__e/Workflow_Behavior_Event__e.object-meta.xml
<CustomObject>
    <label>Workflow Behavior Event</label>
    <pluralLabel>Workflow Behavior Events</pluralLabel>
</CustomObject>