force-app/main/default/objects/Workflow_Behavior_Event__e/fields/Behavior_Data__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Data__c</fullName>
    <label>Behavior Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>