force-app/main/default/objects/Workflow_Behavior_Event__e/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>