force-app/main/default/objects/Workflow_Behavior_Event__e/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>